# i18n-puzzles-2025

./: .gitignore  Cargo.toml  README.md  build_tzdb.sh
data/examples/: 10.txt  12.txt  20.txt
src/: main.rs  template.txt
src/template/: day.rs  mod.rs  runner.rs
src/template/commands/: mod.rs  solve.rs
src/utils/: grid2d.rs  grid3d.rs  misc.rs  mod.rs  parse.rs  range.rs  time.rs  vector2d.rs  vector3d.rs
