[package]
name = "i18n_puzzles"
version = "0.11.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2024"
default-run = "i18n_puzzles"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []
chrono = []

[dependencies]

# Template dependencies
chrono = { version = "0.4.38" }
chrono-tz = "0.10.1"
dateparser = "0.2.1"
dhat = { version = "0.3.3", optional = true }
encoding = "0.2.33"
hashbrown = "0.15.2"
itertools = "0.14.0"
pico-args = "0.5.0"
regex = "1.11.1"
time = { version = "0.3.39", features = ["parsing", "formatting"] }
tinyjson = "2.5.1"
unicode-normalization = "0.1.24"
unicode-segmentation = "1.12.0"

# Solution dependencies
